<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.onlinetest.stockbit.bibit.view.splash.SplashFragment"
        android:label="@string/txt_splash">
        <action
            android:id="@+id/actionNavSplashtoLogin"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/actionNavSplashtoMain"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.onlinetest.stockbit.bibit.main.MainFragment"
        android:label="@string/main">
        <action
            android:id="@+id/actionNavMainToLogin"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.onlinetest.stockbit.bibit.view.login.LoginFragment"
        android:label="@string/txt_login">
        <action
            android:id="@+id/actionNavLoginToMain"
            app:destination="@id/navigation_main" />
    </fragment>

</navigation>